# librime-lua

./: .gitignore  CMakeLists.txt
lua5.4/: loslib.c
src/lib/: lauxlib-compat.c  lua_templates.h
